package dat.entities;

import dat.security.entities.User;
import jakarta.persistence.*;
import lombok.Data;

import java.security.Timestamp;

@Entity
@Table(name = "POINTS")
@Data
public class Point {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private int id;

    @ManyToOne
    @JoinColumn(name = "user_id")
    private User user;

    @ManyToOne
    @JoinColumn(name = "match_id")
    private Match match;

    @Column(name = "points_earned")
    private int pointsEarned;

    @Column(name = "earned_at")
    private Timestamp earnedAt;

}